--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/navHome">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/navHome"
         android:name="com.wholedetail.react_shop_android.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_nav_home_to_TShirtFragment"
+            app:destination="@id/TShirtFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -22,4 +26,13 @@
         android:name="com.wholedetail.react_shop_android.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+    <fragment
+        android:id="@+id/TShirtFragment"
+        android:name="com.wholedetail.react_shop_android.ui.TShirtFragment"
+        android:label="fragmentTshirt"
+        tools:layout="@layout/fragment_t_shirt">
+        <argument
+            android:name="tShirtId"
+            app:argType="long" />
+    </fragment>
 </navigation>
