--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+
+    <color name="green_A400">#00e676</color>
+    <color name="green_A400_dark">#00e676</color>
+
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="teal_A400">#1de9b6</color>
+    <color name="teal_A400_dark">#00b686</color>
+
+    <color name="cyan_A400">#00e5ff</color>
+    <color name="cyan_A400_dark">#00b2cc</color>
 
     <color name="black">#000000</color>
     <color name="gray">#191919</color>
@@ -12,5 +18,6 @@
     <color name="gray_lighter">#BABABA</color>
     <color name="gray_inactive">#E7E7E7</color>
     <color name="white">#FFFFFF</color>
+    <color name="ripple_background">#80000000</color>
 
 </resources>
